--- a/.github/workflows/disgusting-domains.yml
+++ b/.github/workflows/disgusting-domains.yml
@@ -44,6 +44,7 @@ jobs:
         run: |
           cat *.list > output
           sed -i '/include:/d' output
+          sed -i '/#/d' output
           sed -i 's/full://g' output
           mkdir publish
           mv output ./publish/list
