--- a/.github/workflows/disgusting-domains.yml
+++ b/.github/workflows/disgusting-domains.yml
@@ -49,6 +49,7 @@ jobs:
           sed -i '/#/d' output
           sed -i 's/full://g' output
           sed -i 's/@cn//g' output
+          sed -i '/^\s*$/d' output
           mkdir publish
           mv output ./publish/list
           
