--- a/.github/workflows/disgusting-domains.yml
+++ b/.github/workflows/disgusting-domains.yml
@@ -42,6 +42,7 @@ jobs:
           wget https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/youku -O youku.list
           wget https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/xiaomi -O xiaomi.list
           wget https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/adidas -O aidas.list
+          wget https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/kuaishou -O kuaishou.list
 
       - name: generate list
         run: |
