--- a/.github/workflows/disgusting-domains.yml
+++ b/.github/workflows/disgusting-domains.yml
@@ -32,8 +32,8 @@ jobs:
           wget https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/instagram -O instagram.list
           wget https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/jd -O jd.list
           wget https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/nike -O nike.list
-          sed -i '1,3d' nike.list
-          echo *.nike >> nike.list
+          # sed -i '1,3d' nike.list
+          # echo *.nike >> nike.list
           wget https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/sina -O sina.list
           wget https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/tiktok -O tiktok.list
           wget https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/twitter -O twitter.list
