--- a/.github/workflows/disgusting-domains.yml
+++ b/.github/workflows/disgusting-domains.yml
@@ -41,7 +41,10 @@ jobs:
           wget https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/xiaomi -O xiaomi.list
           wget https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/adidas -O aidas.list
           wget https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/kuaishou -O kuaishou.list
-          wget https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/pinduoduo -O pdd.list
+          wget https://raw.githubusercontent.com/so1ar/disgusting-domains/main/2345 -O 2345.list
+          wget https://raw.githubusercontent.com/so1ar/disgusting-domains/main/pdd -O pdd.list
+          wget https://raw.githubusercontent.com/so1ar/disgusting-domains/main/360 -O 260.list
+          wget https://raw.githubusercontent.com/so1ar/disgusting-domains/main/baidu -O baidu.list
 
       - name: generate list
         run: |
