--- a/.github/workflows/disgusting-domains.yml
+++ b/.github/workflows/disgusting-domains.yml
@@ -48,7 +48,7 @@ jobs:
           sed -i 's/.$//' rules
           cp rules ./publish/domains
           cd publish
-          awk '{print "||" $0}' domains | awk '{print $0 "^$ctag=user_admin"}' > rules-personal
+          awk '{print "||" $0}' domains | awk '{print $0 "^$ctag=user_admin|device_nas"}' > rules-personal
 
       - name: Git push assets to "release" branch
         run: |
